--- a/build.gradle
+++ b/build.gradle
@@ -35,10 +35,12 @@ dependencies {
 	implementation 'io.swagger.parser.v3:swagger-parser:2.0.20'
     implementation 'org.openapitools:jackson-databind-nullable:0.2.1'
 	implementation 'javax.annotation:javax.annotation-api:1.3.2'
+	implementation 'org.mapstruct:mapstruct:1.5.5.Final'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.microsoft.sqlserver:mssql-jdbc'
 	compileOnly 'javax.servlet:javax.servlet-api:3.0.1'
 	annotationProcessor 'org.projectlombok:lombok'
+	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.batch:spring-batch-test'
 	testImplementation 'org.springframework.security:spring-security-test'
